Add proc_file option

--- a/example/config.yml
+++ b/example/config.yml
@@ -41,11 +41,7 @@ filters:
           end
         type: string
       - name: comment
-        proc: |
-          ->(comment, record) do
-            return [record["account"].to_s].to_json unless comment
-            comment.upcase.split(" ").map { |s| CGI.escape(s) }
-          end
+        proc_file: comment_upcase.rb
         skip_nil: false
         type: json
     target: events
